refactor to use "state" instead of "status". potential API risks, luckily no one is using it :)
