# gen/vlr/api/api.pb.go
@@ -21,55 +21,55 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
-type Status int32
+type MatchState int32
 
 const (
-	Status_STATUS_UNSPECIFIED Status = 0
-	Status_STATUS_LIVE        Status = 1
-	Status_STATUS_UPCOMING    Status = 2
-	Status_STATUS_COMPLETED   Status = 3
+	MatchState_MATCH_STATE_UNSPECIFIED MatchState = 0
+	MatchState_MATCH_STATE_LIVE        MatchState = 1
+	MatchState_MATCH_STATE_UPCOMING    MatchState = 2
+	MatchState_MATCH_STATE_COMPLETED   MatchState = 3
 )
 
-// Enum value maps for Status.
+// Enum value maps for MatchState.
 var (
-	Status_name = map[int32]string{
-		0: "STATUS_UNSPECIFIED",
-		1: "STATUS_LIVE",
-		2: "STATUS_UPCOMING",
-		3: "STATUS_COMPLETED",
+	MatchState_name = map[int32]string{
+		0: "MATCH_STATE_UNSPECIFIED",
+		1: "MATCH_STATE_LIVE",
+		2: "MATCH_STATE_UPCOMING",
+		3: "MATCH_STATE_COMPLETED",
 	}
-	Status_value = map[string]int32{
-		"STATUS_UNSPECIFIED": 0,
-		"STATUS_LIVE":        1,
-		"STATUS_UPCOMING":    2,
-		"STATUS_COMPLETED":   3,
+	MatchState_value = map[string]int32{
+		"MATCH_STATE_UNSPECIFIED": 0,
+		"MATCH_STATE_LIVE":        1,
+		"MATCH_STATE_UPCOMING":    2,
+		"MATCH_STATE_COMPLETED":   3,
 	}
 )
 
-func (x Status) Enum() *Status {
-	p := new(Status)
+func (x MatchState) Enum() *MatchState {
+	p := new(MatchState)
 	*p = x
 	return p
 }
 
-func (x Status) String() string {
+func (x MatchState) String() string {
 	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
 }
 
-func (Status) Descriptor() protoreflect.EnumDescriptor {
+func (MatchState) Descriptor() protoreflect.EnumDescriptor {
 	return file_vlr_api_api_proto_enumTypes[0].Descriptor()
 }
 
-func (Status) Type() protoreflect.EnumType {
+func (MatchState) Type() protoreflect.EnumType {
 	return &file_vlr_api_api_proto_enumTypes[0]
 }
 
-func (x Status) Number() protoreflect.EnumNumber {
+func (x MatchState) Number() protoreflect.EnumNumber {
 	return protoreflect.EnumNumber(x)
 }
 
-// Deprecated: Use Status.Descriptor instead.
-func (Status) EnumDescriptor() ([]byte, []int) {
+// Deprecated: Use MatchState.Descriptor instead.
+func (MatchState) EnumDescriptor() ([]byte, []int) {
 	return file_vlr_api_api_proto_rawDescGZIP(), []int{0}
 }
 
@@ -197,7 +197,7 @@ type Match_Head struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Status   Status                 `protobuf:"varint,1,opt,name=status,proto3,enum=vlr.api.Status" json:"status,omitempty"`
+	State    MatchState             `protobuf:"varint,1,opt,name=state,proto3,enum=vlr.api.MatchState" json:"state,omitempty"`
 	MatchId  string                 `protobuf:"bytes,2,opt,name=match_id,json=matchId,proto3" json:"match_id,omitempty"`
 	Event    *Match_Head_Event      `protobuf:"bytes,3,opt,name=event,proto3" json:"event,omitempty"`
 	DateTime *timestamppb.Timestamp `protobuf:"bytes,4,opt,name=date_time,json=dateTime,proto3" json:"date_time,omitempty"`
@@ -235,11 +235,11 @@ func (*Match_Head) Descriptor() ([]byte, []int) {
 	return file_vlr_api_api_proto_rawDescGZIP(), []int{0, 0}
 }
 
-func (x *Match_Head) GetStatus() Status {
+func (x *Match_Head) GetState() MatchState {
 	if x != nil {
-		return x.Status
+		return x.State
 	}
-	return Status_STATUS_UNSPECIFIED
+	return MatchState_MATCH_STATE_UNSPECIFIED
 }
 
 func (x *Match_Head) GetMatchId() string {
@@ -518,7 +518,7 @@ var file_vlr_api_api_proto_rawDesc = []byte{
 	0x0a, 0x11, 0x76, 0x6c, 0x72, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x70, 0x69, 0x2e, 0x70, 0x72,
 	0x6f, 0x74, 0x6f, 0x12, 0x07, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x1a, 0x1f, 0x67, 0x6f,
 	0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x74, 0x69,
-	0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x98, 0x05,
+	0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x9a, 0x05,
 	0x0a, 0x05, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x12, 0x27, 0x0a, 0x04, 0x68, 0x65, 0x61, 0x64, 0x18,
 	0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x13, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e,
 	0x4d, 0x61, 0x74, 0x63, 0x68, 0x2e, 0x48, 0x65, 0x61, 0x64, 0x52, 0x04, 0x68, 0x65, 0x61, 0x64,
@@ -527,52 +527,54 @@ var file_vlr_api_api_proto_rawDesc = []byte{
 	0x2e, 0x56, 0x65, 0x72, 0x73, 0x75, 0x73, 0x52, 0x06, 0x76, 0x65, 0x72, 0x73, 0x75, 0x73, 0x12,
 	0x26, 0x0a, 0x04, 0x6d, 0x61, 0x70, 0x73, 0x18, 0x03, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x12, 0x2e,
 	0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x2e, 0x4d, 0x61,
-	0x70, 0x52, 0x04, 0x6d, 0x61, 0x70, 0x73, 0x1a, 0x82, 0x02, 0x0a, 0x04, 0x48, 0x65, 0x61, 0x64,
-	0x12, 0x27, 0x0a, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0e,
-	0x32, 0x0f, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75,
-	0x73, 0x52, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x19, 0x0a, 0x08, 0x6d, 0x61, 0x74,
-	0x63, 0x68, 0x5f, 0x69, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x6d, 0x61, 0x74,
-	0x63, 0x68, 0x49, 0x64, 0x12, 0x2f, 0x0a, 0x05, 0x65, 0x76, 0x65, 0x6e, 0x74, 0x18, 0x03, 0x20,
-	0x01, 0x28, 0x0b, 0x32, 0x19, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4d, 0x61,
-	0x74, 0x63, 0x68, 0x2e, 0x48, 0x65, 0x61, 0x64, 0x2e, 0x45, 0x76, 0x65, 0x6e, 0x74, 0x52, 0x05,
-	0x65, 0x76, 0x65, 0x6e, 0x74, 0x12, 0x37, 0x0a, 0x09, 0x64, 0x61, 0x74, 0x65, 0x5f, 0x74, 0x69,
-	0x6d, 0x65, 0x18, 0x04, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c,
-	0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73,
-	0x74, 0x61, 0x6d, 0x70, 0x52, 0x08, 0x64, 0x61, 0x74, 0x65, 0x54, 0x69, 0x6d, 0x65, 0x1a, 0x4c,
-	0x0a, 0x05, 0x45, 0x76, 0x65, 0x6e, 0x74, 0x12, 0x19, 0x0a, 0x08, 0x65, 0x76, 0x65, 0x6e, 0x74,
-	0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x65, 0x76, 0x65, 0x6e, 0x74,
-	0x49, 0x64, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09,
-	0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x73, 0x74, 0x61, 0x67, 0x65, 0x18,
-	0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x73, 0x74, 0x61, 0x67, 0x65, 0x1a, 0x82, 0x01, 0x0a,
-	0x06, 0x56, 0x65, 0x72, 0x73, 0x75, 0x73, 0x12, 0x23, 0x0a, 0x05, 0x74, 0x65, 0x61, 0x6d, 0x31,
-	0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0d, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69,
-	0x2e, 0x54, 0x65, 0x61, 0x6d, 0x52, 0x05, 0x74, 0x65, 0x61, 0x6d, 0x31, 0x12, 0x16, 0x0a, 0x06,
-	0x73, 0x63, 0x6f, 0x72, 0x65, 0x31, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x06, 0x73, 0x63,
-	0x6f, 0x72, 0x65, 0x31, 0x12, 0x23, 0x0a, 0x05, 0x74, 0x65, 0x61, 0x6d, 0x32, 0x18, 0x03, 0x20,
-	0x01, 0x28, 0x0b, 0x32, 0x0d, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x54, 0x65,
-	0x61, 0x6d, 0x52, 0x05, 0x74, 0x65, 0x61, 0x6d, 0x32, 0x12, 0x16, 0x0a, 0x06, 0x73, 0x63, 0x6f,
-	0x72, 0x65, 0x32, 0x18, 0x04, 0x20, 0x01, 0x28, 0x05, 0x52, 0x06, 0x73, 0x63, 0x6f, 0x72, 0x65,
-	0x32, 0x1a, 0x84, 0x01, 0x0a, 0x03, 0x4d, 0x61, 0x70, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d,
-	0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x30, 0x0a,
-	0x06, 0x72, 0x6f, 0x75, 0x6e, 0x64, 0x73, 0x18, 0x03, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x18, 0x2e,
-	0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x2e, 0x4d, 0x61,
-	0x70, 0x2e, 0x52, 0x6f, 0x75, 0x6e, 0x64, 0x52, 0x06, 0x72, 0x6f, 0x75, 0x6e, 0x64, 0x73, 0x1a,
-	0x37, 0x0a, 0x05, 0x52, 0x6f, 0x75, 0x6e, 0x64, 0x12, 0x16, 0x0a, 0x06, 0x73, 0x63, 0x6f, 0x72,
-	0x65, 0x31, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x06, 0x73, 0x63, 0x6f, 0x72, 0x65, 0x31,
-	0x12, 0x16, 0x0a, 0x06, 0x73, 0x63, 0x6f, 0x72, 0x65, 0x32, 0x18, 0x03, 0x20, 0x01, 0x28, 0x05,
-	0x52, 0x06, 0x73, 0x63, 0x6f, 0x72, 0x65, 0x32, 0x22, 0x33, 0x0a, 0x04, 0x54, 0x65, 0x61, 0x6d,
-	0x12, 0x17, 0x0a, 0x07, 0x74, 0x65, 0x61, 0x6d, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28,
-	0x09, 0x52, 0x06, 0x74, 0x65, 0x61, 0x6d, 0x49, 0x64, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d,
-	0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x2a, 0x5c, 0x0a,
-	0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x16, 0x0a, 0x12, 0x53, 0x54, 0x41, 0x54, 0x55,
-	0x53, 0x5f, 0x55, 0x4e, 0x53, 0x50, 0x45, 0x43, 0x49, 0x46, 0x49, 0x45, 0x44, 0x10, 0x00, 0x12,
-	0x0f, 0x0a, 0x0b, 0x53, 0x54, 0x41, 0x54, 0x55, 0x53, 0x5f, 0x4c, 0x49, 0x56, 0x45, 0x10, 0x01,
-	0x12, 0x13, 0x0a, 0x0f, 0x53, 0x54, 0x41, 0x54, 0x55, 0x53, 0x5f, 0x55, 0x50, 0x43, 0x4f, 0x4d,
-	0x49, 0x4e, 0x47, 0x10, 0x02, 0x12, 0x14, 0x0a, 0x10, 0x53, 0x54, 0x41, 0x54, 0x55, 0x53, 0x5f,
-	0x43, 0x4f, 0x4d, 0x50, 0x4c, 0x45, 0x54, 0x45, 0x44, 0x10, 0x03, 0x42, 0x23, 0x5a, 0x21, 0x67,
-	0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x64, 0x65, 0x72, 0x61, 0x72, 0x6b,
-	0x65, 0x6e, 0x2f, 0x76, 0x6c, 0x72, 0x2d, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x70, 0x52, 0x04, 0x6d, 0x61, 0x70, 0x73, 0x1a, 0x84, 0x02, 0x0a, 0x04, 0x48, 0x65, 0x61, 0x64,
+	0x12, 0x29, 0x0a, 0x05, 0x73, 0x74, 0x61, 0x74, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0e, 0x32,
+	0x13, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x53,
+	0x74, 0x61, 0x74, 0x65, 0x52, 0x05, 0x73, 0x74, 0x61, 0x74, 0x65, 0x12, 0x19, 0x0a, 0x08, 0x6d,
+	0x61, 0x74, 0x63, 0x68, 0x5f, 0x69, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x6d,
+	0x61, 0x74, 0x63, 0x68, 0x49, 0x64, 0x12, 0x2f, 0x0a, 0x05, 0x65, 0x76, 0x65, 0x6e, 0x74, 0x18,
+	0x03, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x19, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e,
+	0x4d, 0x61, 0x74, 0x63, 0x68, 0x2e, 0x48, 0x65, 0x61, 0x64, 0x2e, 0x45, 0x76, 0x65, 0x6e, 0x74,
+	0x52, 0x05, 0x65, 0x76, 0x65, 0x6e, 0x74, 0x12, 0x37, 0x0a, 0x09, 0x64, 0x61, 0x74, 0x65, 0x5f,
+	0x74, 0x69, 0x6d, 0x65, 0x18, 0x04, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f,
+	0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d,
+	0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x08, 0x64, 0x61, 0x74, 0x65, 0x54, 0x69, 0x6d, 0x65,
+	0x1a, 0x4c, 0x0a, 0x05, 0x45, 0x76, 0x65, 0x6e, 0x74, 0x12, 0x19, 0x0a, 0x08, 0x65, 0x76, 0x65,
+	0x6e, 0x74, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x65, 0x76, 0x65,
+	0x6e, 0x74, 0x49, 0x64, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01,
+	0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x73, 0x74, 0x61, 0x67,
+	0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x73, 0x74, 0x61, 0x67, 0x65, 0x1a, 0x82,
+	0x01, 0x0a, 0x06, 0x56, 0x65, 0x72, 0x73, 0x75, 0x73, 0x12, 0x23, 0x0a, 0x05, 0x74, 0x65, 0x61,
+	0x6d, 0x31, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0d, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61,
+	0x70, 0x69, 0x2e, 0x54, 0x65, 0x61, 0x6d, 0x52, 0x05, 0x74, 0x65, 0x61, 0x6d, 0x31, 0x12, 0x16,
+	0x0a, 0x06, 0x73, 0x63, 0x6f, 0x72, 0x65, 0x31, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x06,
+	0x73, 0x63, 0x6f, 0x72, 0x65, 0x31, 0x12, 0x23, 0x0a, 0x05, 0x74, 0x65, 0x61, 0x6d, 0x32, 0x18,
+	0x03, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0d, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e,
+	0x54, 0x65, 0x61, 0x6d, 0x52, 0x05, 0x74, 0x65, 0x61, 0x6d, 0x32, 0x12, 0x16, 0x0a, 0x06, 0x73,
+	0x63, 0x6f, 0x72, 0x65, 0x32, 0x18, 0x04, 0x20, 0x01, 0x28, 0x05, 0x52, 0x06, 0x73, 0x63, 0x6f,
+	0x72, 0x65, 0x32, 0x1a, 0x84, 0x01, 0x0a, 0x03, 0x4d, 0x61, 0x70, 0x12, 0x12, 0x0a, 0x04, 0x6e,
+	0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12,
+	0x30, 0x0a, 0x06, 0x72, 0x6f, 0x75, 0x6e, 0x64, 0x73, 0x18, 0x03, 0x20, 0x03, 0x28, 0x0b, 0x32,
+	0x18, 0x2e, 0x76, 0x6c, 0x72, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x2e,
+	0x4d, 0x61, 0x70, 0x2e, 0x52, 0x6f, 0x75, 0x6e, 0x64, 0x52, 0x06, 0x72, 0x6f, 0x75, 0x6e, 0x64,
+	0x73, 0x1a, 0x37, 0x0a, 0x05, 0x52, 0x6f, 0x75, 0x6e, 0x64, 0x12, 0x16, 0x0a, 0x06, 0x73, 0x63,
+	0x6f, 0x72, 0x65, 0x31, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x06, 0x73, 0x63, 0x6f, 0x72,
+	0x65, 0x31, 0x12, 0x16, 0x0a, 0x06, 0x73, 0x63, 0x6f, 0x72, 0x65, 0x32, 0x18, 0x03, 0x20, 0x01,
+	0x28, 0x05, 0x52, 0x06, 0x73, 0x63, 0x6f, 0x72, 0x65, 0x32, 0x22, 0x33, 0x0a, 0x04, 0x54, 0x65,
+	0x61, 0x6d, 0x12, 0x17, 0x0a, 0x07, 0x74, 0x65, 0x61, 0x6d, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x06, 0x74, 0x65, 0x61, 0x6d, 0x49, 0x64, 0x12, 0x12, 0x0a, 0x04, 0x6e,
+	0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x2a,
+	0x74, 0x0a, 0x0a, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x53, 0x74, 0x61, 0x74, 0x65, 0x12, 0x1b, 0x0a,
+	0x17, 0x4d, 0x41, 0x54, 0x43, 0x48, 0x5f, 0x53, 0x54, 0x41, 0x54, 0x45, 0x5f, 0x55, 0x4e, 0x53,
+	0x50, 0x45, 0x43, 0x49, 0x46, 0x49, 0x45, 0x44, 0x10, 0x00, 0x12, 0x14, 0x0a, 0x10, 0x4d, 0x41,
+	0x54, 0x43, 0x48, 0x5f, 0x53, 0x54, 0x41, 0x54, 0x45, 0x5f, 0x4c, 0x49, 0x56, 0x45, 0x10, 0x01,
+	0x12, 0x18, 0x0a, 0x14, 0x4d, 0x41, 0x54, 0x43, 0x48, 0x5f, 0x53, 0x54, 0x41, 0x54, 0x45, 0x5f,
+	0x55, 0x50, 0x43, 0x4f, 0x4d, 0x49, 0x4e, 0x47, 0x10, 0x02, 0x12, 0x19, 0x0a, 0x15, 0x4d, 0x41,
+	0x54, 0x43, 0x48, 0x5f, 0x53, 0x54, 0x41, 0x54, 0x45, 0x5f, 0x43, 0x4f, 0x4d, 0x50, 0x4c, 0x45,
+	0x54, 0x45, 0x44, 0x10, 0x03, 0x42, 0x23, 0x5a, 0x21, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e,
+	0x63, 0x6f, 0x6d, 0x2f, 0x64, 0x65, 0x72, 0x61, 0x72, 0x6b, 0x65, 0x6e, 0x2f, 0x76, 0x6c, 0x72,
+	0x2d, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x33,
 }
 
 var (
@@ -590,7 +592,7 @@ func file_vlr_api_api_proto_rawDescGZIP() []byte {
 var file_vlr_api_api_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
 var file_vlr_api_api_proto_msgTypes = make([]protoimpl.MessageInfo, 7)
 var file_vlr_api_api_proto_goTypes = []any{
-	(Status)(0),                   // 0: vlr.api.Status
+	(MatchState)(0),               // 0: vlr.api.MatchState
 	(*Match)(nil),                 // 1: vlr.api.Match
 	(*Team)(nil),                  // 2: vlr.api.Team
 	(*Match_Head)(nil),            // 3: vlr.api.Match.Head
@@ -604,7 +606,7 @@ var file_vlr_api_api_proto_depIdxs = []int32{
 	3, // 0: vlr.api.Match.head:type_name -> vlr.api.Match.Head
 	4, // 1: vlr.api.Match.versus:type_name -> vlr.api.Match.Versus
 	5, // 2: vlr.api.Match.maps:type_name -> vlr.api.Match.Map
-	0, // 3: vlr.api.Match.Head.status:type_name -> vlr.api.Status
+	0, // 3: vlr.api.Match.Head.state:type_name -> vlr.api.MatchState
 	6, // 4: vlr.api.Match.Head.event:type_name -> vlr.api.Match.Head.Event
 	8, // 5: vlr.api.Match.Head.date_time:type_name -> google.protobuf.Timestamp
 	2, // 6: vlr.api.Match.Versus.team1:type_name -> vlr.api.Team
